Use relative URL instead of absolute

--- a/app/index.html
+++ b/app/index.html
@@ -33,19 +33,19 @@
             </a>
           </div>
           <ul class="nav-links">
-            <a href="/" class="active"><li>
+            <a href="" class="active"><li>
               <span class="mobile-hidden">Servers</span>
               <span class="mobile-only fa fa-server"></span>
             </li></a>
-            <a href="/backups"><li>
+            <a href="backups"><li>
               <span class="mobile-hidden">Backups</span>
               <span class="mobile-only fa fa-database"></span>
             </li></a>
-            <a href="/settings"><li>
+            <a href="settings"><li>
               <span class="mobile-hidden">Settings</span>
               <span class="mobile-only fa fa-cog"></span>
             </li></a>
-            <a href="/support"><li>
+            <a href="support"><li>
               <span class="mobile-hidden">Support</span>
               <span class="mobile-only fa fa-support"></span>
             </li></a>
